--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,43 @@ section h2 span {
 	right: 0;
 }
 
+.dl {
+	background: #f0f0f0;
+	padding: 0.75em 1em;
+	margin: 0 0 2em;
+	font-variant: small-caps;
+	letter-spacing: 0.05em;
+	text-transform: lowercase;
+	/*text-align: left;*/
+}
+
+.dl a {
+	display: inline-block;
+	vertical-align: middle;
+	background: #c00;
+	padding: 0em 0.5em;
+	color: #fff;
+	border-radius: 0.2em;
+	margin: 0 0.15em;
+}
+
+.dl a:after {
+	content: '▾';
+	font-size: 0.7em;
+	vertical-align: middle;
+	color: rgba(255,255,255,0.5);
+	margin-left: 0.5em;
+}
+
+.dl a:hover {
+	background: #fff;
+	color: #c00;
+}
+
+.dl a:hover:after {
+	color: rgba(204,0,0,0.5);
+}
+
 /* mobile */
 @media (max-width:33em) {
 	body {
