--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,7 @@
-@font-face { 
-	font-family:"ag"; 
-	src: local('Adobe Garamond Pro'), url("./ag.otf") format("opentype"); 
-}
-
 body {
 	padding: 1em;
 	text-align: center;
-	font-family: 'ag';
+	font-family: adobe-garamond-pro, serif; 
 	max-width: 40em;
 	margin: 0 auto;
 	color: #222;
@@ -75,6 +70,20 @@ section h2 span {
 	padding: 0 0.5em;
 }
 
+.yt {
+	height: 0;
+	padding-bottom: 55.8%;
+	position: relative;
+}
+
+.yt iframe {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+}
+
 .turneu {
 	margin: 0 auto;
 	border-collapse: collapse;
@@ -94,9 +103,7 @@ section h2 span {
 }
 
 .album {
-	/*padding: 1em 0;*/
-	/*border-top: 1px solid currentColor;*/
-	padding-bottom: 1em;
+	padding-bottom: 2em;
 }
 
 .album h3, .album h4 {
@@ -108,93 +115,101 @@ section h2 span {
 	margin-bottom: 1em;
 }
 
-.embed {
-	height: 0;
-	padding-bottom: 47%;
+.album__cover {
+	display: block;
+	max-width: 20em;
+	margin: 0 auto;
 	position: relative;
+	background: #000;
+	box-shadow: 0 0.15em 0.4em rgba(0, 0, 0, 0.2);
 }
 
-.embed iframe,
-.embed img {
-	width: 50%;
-	height: 100%;
+.album__cover img {
+	display: block;
+	width: 100%;
+	transition: 0.2s opacity;
+	opacity: 1;
+	/*border: 1px solid #E5E5E5;*/
+}
+
+.album__cover:after {
+	content: 'Download MP3';
 	position: absolute;
-	top: 0;
-}
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	opacity: 0;
+	transition: 0.2s opacity;
 
-.embed img {
-	border: 1px solid #E5E5E5;
-	border-right: none;
-	box-sizing: border-box;
-	left: 0;
-}
-
-.embed iframe {
-	right: 0;
-}
-
-.dl {
-	background: #f0f0f0;
-	padding: 0.75em 0.25em;
-	margin: 0 0 2em;
 	font-variant: small-caps;
 	letter-spacing: 0.05em;
 	text-transform: lowercase;
-	/*text-align: left;*/
-}
-
-.dl a {
-	display: inline-block;
-	vertical-align: middle;
 	background: #c00;
 	padding: 0em 0.5em;
 	color: #fff;
 	border-radius: 0.2em;
-	margin: 0 0.15em;
 }
 
-.dl a:after {
-	content: '▾';
-	font-size: 0.7em;
+.slash {
+	font-size: 1.2em;
+	display: inline-block;
 	vertical-align: middle;
-	color: rgba(255,255,255,0.5);
-	margin-left: 0.5em;
 }
 
-.dl a:hover {
-	background: #fff;
-	color: #c00;
+.dagger {
+	display: inline-block;
+	vertical-align: middle;
+	margin: 0 0.5em;
 }
 
-.dl a:hover:after {
-	color: rgba(204,0,0,0.5);
+.album__cover:hover img {
+	opacity: 0.5;
+}
+
+.album__cover:hover:after {
+	opacity: 1;
+}
+
+.album__links {
+	padding: 1em 0;
+}
+
+.album__link {
+	display: inline-block;
+	height: 1.25em;
+	background-repeat: no-repeat;
+}
+
+.album__link--apple {
+	background-image: url('../img/apple-music-bw.svg');
+	background-size: auto 1em;
+	background-position: center 40%;
+	width: 6em;
+}
+
+.album__link--spotify {
+	background-image: url('../img/spotify-bw.png');
+	background-size: auto 1.25em;
+	background-position: center center;
+	width: 6em;
+}
+
+footer {
+	font-size: 0.9em;
+	color: #777;
+	margin: 2em 0;
 }
 
 /* mobile */
 @media (max-width:33em) {
 	body {
 		font-size: 110%;
+		padding: 0.5em;
 	}
 
 	nav li {
 		display: block;
 		padding: 0.25em 0;
-	}
-
-	.embed {
-		height: auto;
-		padding-bottom: 0;
-	}
-
-	.embed img {
-		border-right: 1px solid #e4e4e4;
-	}
-
-	.embed img,
-	.embed iframe {
-		position: static;
-		width: 100%;
-		heigth: auto;
 	}
 
 	.turneu {
@@ -205,5 +220,9 @@ section h2 span {
 	.turneu td {
 		padding-left: 0;
 		padding-right: 0;
+	}
+
+	section {
+		padding: 0.5em;
 	}
 }
